# Marvel-Quote-Generator

./: .gitignore  README.md  all_quotes.txt  collect_quotes.py
frontend/: package-lock.json
frontend/src/: App.js
generate_quote/: Cargo.toml
generate_quote/src/: gen_quote.rs  main.rs
