[package]
name = "generate_quote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
unidecode = "0.3.0"